[FEAT]: add title and description for each page

--- a/src/components/ArtistItem.astro
+++ b/src/components/ArtistItem.astro
@@ -1,7 +1,7 @@
 ---
 import { sluglify } from "@/utils/sluglify"
 
-export interface Props {
+interface Props {
   name: string
   avatar: string
 }
