--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,10 @@ import MainLayout from "@/layouts/MainLayout.astro"
 import ArtistsList from "@/components/ArtistsList.astro"
 ---
 
-<MainLayout>
+<MainLayout
+  title="Discover artists and songs"
+  description="Discover artists and songs"
+>
   <h1>Artists</h1>
 
   <ArtistsList />
