--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,12 +1,21 @@
+---
+interface Props {
+  title: string
+  description: string
+}
+
+const { description, title } = Astro.props
+---
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
+    <meta name="description" content={description} />
     <meta name="view-transition" content="same-origin" />
 
-    <title>View Transitions Demo</title>
+    <title>{title}</title>
   </head>
   <body class="max-w-7xl mx-auto">
     <slot />
