--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,6 +1,6 @@
 ---
 import "@/styles/globals.css"
-import Header from "@/shared/Header.astro"
+import Header from "@/components/shared/Header.astro"
 
 interface Props {
   title: string
