[FEAT]: add colors

--- a/src/components/ArtistItem.astro
+++ b/src/components/ArtistItem.astro
@@ -11,7 +11,7 @@ const { avatar, name } = Astro.props
 
 <a href={`/${sluglify(name)}`}>
   <article
-    class="bg-slate-950 p-4 rounded-md hover:bg-slate-900 focus:bg-slate-900 transition-colors"
+    class="bg-gray-1 p-4 rounded-md hover:bg-gray-2 focus:bg-gray-2 transition-colors"
   >
     <img
       src={avatar}
